--- a/src/app/buy-page/buy-page.component.html
+++ b/src/app/buy-page/buy-page.component.html
@@ -27,4 +27,75 @@
             <img class="icon" src="assets\search.svg" alt="start search button">
         </div>
     </form>
+    <div class="results">
+        <p class="text-results">Results</p>
+        <div class="filters" type="button">
+            <p class="text-filter">Filters</p>
+            <img class="filters-icon" src="assets\filters.svg" alt="filters icon">
+        </div>
+    </div>
+
+    <div class="first-book-card">
+        <img class="book-img" src="assets\diary2.jpg" alt="The image for 'Diary of a Wimpy kid'">
+        <div class="book-details">
+            <p class="title"><b>Diary of a Wimpy Kid</b></p>
+            <p class="price">€12</p>
+            <div class="delivery-details">
+                <img class="filters-icon" src="assets\delivery.svg" alt="home delivery icon">
+                <p class="delivery-text">home delivery</p>
+            </div>
+        </div>
+        <div>
+            <p class="condition">As new</p>
+        </div>
+        <img type="button" class="heart-icon" src="assets\black-heart.svg" alt="add to favorites icon" (click)="toUnimplemented()">
+    </div>
+
+    <div class="book-card">
+        <img class="book-img" src="assets\diary3.jpg" alt="The image for 'Diary of a Wimpy kid'">
+        <div class="book-details">
+            <p class="title"><b>Diary of a Wimpy Kid</b></p>
+            <p class="price">€10</p>
+            <div class="delivery-details">
+                <img class="filters-icon" src="assets\delivery.svg" alt="home delivery icon">
+                <p class="delivery-text">home delivery</p>
+            </div>
+        </div>
+        <div>
+            <p class="condition">Damaged</p>
+        </div>
+        <img type="button" class="heart-icon" src="assets\black-heart.svg" alt="add to favorites icon" (click)="toUnimplemented()">
+    </div>
+
+    <div class="book-card">
+        <img class="book-img" src="assets\diary4.jpg" alt="The image for 'Diary of a Wimpy kid'">
+        <div class="book-details">
+            <p class="title"><b>Diary of a Wimpy Kid</b></p>
+            <p class="price">€16</p>
+            <div class="delivery-details">
+                <img class="filters-icon" src="assets\personal-exchange.svg" alt="home delivery icon">
+                <p class="delivery-text">in person exchange</p>
+            </div>
+        </div>
+        <div>
+            <p class="condition">Good</p>
+        </div>
+        <img type="button" class="heart-icon" src="assets\black-heart.svg" alt="add to favorites icon" (click)="toUnimplemented()">
+    </div>
+
+    <div class="book-card">
+        <img class="book-img" src="assets\diary5.jpg" alt="The image for 'Diary of a Wimpy kid'">
+        <div class="book-details">
+            <p class="title"><b>Diary of a Wimpy Kid</b></p>
+            <p class="price">€14</p>
+            <div class="delivery-details">
+                <img class="filters-icon" src="assets\delivery.svg" alt="home delivery icon">
+                <p class="delivery-text">home delivery</p>
+            </div>
+        </div>
+        <div>
+            <p class="condition">Good</p>
+        </div>
+        <img type="button" class="heart-icon" src="assets\black-heart.svg" alt="add to favorites icon" (click)="toUnimplemented()">
+    </div>
 </div>
