--- a/src/app/buy-page-with-title/buy-page-with-title.component.html
+++ b/src/app/buy-page-with-title/buy-page-with-title.component.html
@@ -16,9 +16,9 @@
 
         <div class="form-group">
             <label>Purpose</label>
-            <select class="form-select" aria-label="Category select" placeholder="Purpose" disabled>
-                <option value="" disabled hidden>Purpose</option>
-                <option value="Buy" selected>Buy</option>
+            <select id="purpose" class="form-select" aria-label="Category select" placeholder="Purpose" (change)="goToBuy()">
+                <option value="" selected disabled hidden></option>
+                <option value="Buy">Buy</option>
                 <option value="Borrow">Borrow</option>
             </select>
         </div>
@@ -34,6 +34,9 @@
             <img class="filters-icon" src="assets\filters.svg" alt="filters icon">
         </div>
     </div>
+
+    <p class="text-purpose">To buy</p>
+
     <div class="first-book-card">
         <img class="book-img" src="assets\diary2.jpg" alt="The image for 'Diary of a Wimpy kid'">
         <div class="book-details">
@@ -65,6 +68,8 @@
         </div>
         <img type="button" class="heart-icon2" src="assets\black-heart.svg" alt="add to favorites icon" (click)="toUnimplemented()">
     </div>
+
+    <p class="text-purpose">To borrow</p>
 
     <div class="book-card">
         <img class="book-img" src="assets\diary4.jpg" alt="The image for 'Diary of a Wimpy kid'">
