--- a/src/app/borrow-page-with-title/borrow-page-with-title.component.css
+++ b/src/app/borrow-page-with-title/borrow-page-with-title.component.css
@@ -82,7 +82,7 @@
     display: flex;
     flex-direction: row;
     margin-left: 50px;
-    margin-top: 50px;
+    margin-top: 20px;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     border-radius: 20px;
     cursor: pointer;
@@ -221,4 +221,11 @@
     font-family: monospace;
     margin-left: 10px;
     margin-top: 2px;
+}
+
+.text-purpose {
+    margin-left: 50px;
+    margin-top: 20px;
+    font-size: 22px;
+    font-family: monospace;
 }
