--- a/src/app/buy-filter-results/buy-filter-results.component.css
+++ b/src/app/buy-filter-results/buy-filter-results.component.css
@@ -43,13 +43,14 @@
 .text-results {
     font-size: 26px;
     font-family: monospace;
+    margin-top: 10px;
 }
 
 .text-filter {
     font-size: 18px;
     font-family: Times;
-    margin-top: -5px;
-    margin-right: 2px;
+    margin-top: -4px;
+    margin-right: 5px;
 }
 
 .filters-icon {
@@ -59,23 +60,42 @@
 .filters {
     display: flex;
     flex-direction: row;
-    align-content: center;
+    align-items: center;
+    justify-content: space-between;
     border: 1px solid rgb(6, 3, 49);
     padding: 5px;
     margin-left: 20px;
     margin-top: 5px;
     border-radius: 5px;
     margin-left: 50px;
+    width: 450px;
+    height: 50px;
 }
 
-.book-card {
+.filter {
     display: flex;
     flex-direction: row;
-    margin-left: 50px;
-    margin-top: 20px;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
-    cursor: pointer;
+    align-content: center;
+    justify-content: center;
+    border: 1px solid rgb(6, 3, 49);
+    padding: 5px;
+    border-radius: 5px;
+    width: 100px;
+    height: 30px;
+    background-color: rgb(233, 236, 239);
+}
+
+.filter-delivery {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    border: 1px solid rgb(6, 3, 49);
+    padding: 5px;
+    border-radius: 5px;
+    width: 180px;
+    height: 30px;
+    background-color: rgb(233, 236, 239);
 }
 
 .first-book-card {
@@ -88,10 +108,6 @@
     cursor: pointer;
 }
 
-.book-card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    transform: scale(1.02);
-}
 
 .first-book-card:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
@@ -126,12 +142,7 @@
     font-size: 14px;
     font-family: monospace;
     margin-left: 5px;
-}
-
-.period-text {
-    font-size: 14px;
-    font-family: monospace;
-    margin-top: -10px;
+    margin-top: 15px;
 }
 
 .delivery-details {
@@ -151,16 +162,6 @@
     border-radius: 5px;
 }
 
-.heart-icon2 {
-    margin-top: 10px;
-    width: 40px;
-    align-self: flex-start;
-    margin-left: 410px;
-    border: 1px solid gray;
-    padding: 5px;
-    border-radius: 5px;
-}
-
 .condition {
     border: 1px solid black;
     border-radius: 10px;
@@ -168,57 +169,9 @@
     font-size: 14px;
     font-family: monospace;
     color: white;
-    margin-left: -150px;
-    margin-right: 200px;
+    margin-left: -200px;
+    margin-right: 250px;
     align-content: center;
     background-color: rgb(26, 25, 25);
     margin-top: 10px;
-}
-
-.availability {
-    color: #f4fdd0;
-    font-size: 14px;
-    font-family: monospace;
-    margin-left: 10px;
-    margin-top: 2px;
-}
-
-.av {
-    background-color: teal;
-    align-content: center;
-    border-radius: 5px;
-    width: 170px;
-    height: 25px;
-    margin-top: -10px;
-}
-
-.av-now {
-    background-color: teal;
-    align-content: center;
-    border-radius: 5px;
-    width: 120px;
-    height: 25px;
-    margin-top: -10px;
-}
-
-.delivery-icon {
-    width: 20px;
-    margin-top: -14px;
-}
-
-.lending {
-    align-content: center;
-    border-radius: 5px;
-    width: 220px;
-    height: 25px;
-    background-color: gold;
-    margin-top: 5px;
-}
-
-.lending-text {
-    color: #363533;
-    font-size: 14px;
-    font-family: monospace;
-    margin-left: 10px;
-    margin-top: 2px;
 }
