--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -8,6 +8,7 @@
     <nav class="padd-20">
         <ul>
             <li class="menu-responsive__item pointer">Sell or lend book</li>
+            <li routerLink="/give-book" class="menu-responsive__item pointer">Give a book</li>
             <li class="menu-responsive__item pointer" (click)="toUnimplemented()">Favorites</li>
             <li class="menu-responsive__item pointer" (click)="toUnimplemented()">Chat</li>
             <li class="menu-responsive__item pointer" (click)="toUnimplemented()">My profile</li>
@@ -26,6 +27,11 @@
                     Sell or lend a book
                 </button>
             </li>
+          <li routerLink="/give-book" class="button-item">
+            <button type="button">
+              Give a book
+            </button>
+          </li>
             <li class="main-menu__item pointer" (click)="toUnimplemented()">
                 <img class="icon" src="assets\chat.svg" alt="chat icon">
                 <p class="icon-text">Chat</p>
