--- a/src/app/give-book/verification/verification.component.html
+++ b/src/app/give-book/verification/verification.component.html
@@ -1,1 +1,72 @@
-<p>verification works!</p>
+<div *ngIf="!publish" class="container">
+  <div  class="row">
+    <div class="col-12 col-lg-6 position-relative">
+      <img src="assets/edit.png" width="50"
+           class="position-absolute"
+           role="button"
+           (click)="onEdit.emit()"
+           style="right: 40px; top: 10px; z-index: 1000"/>
+      <ngb-carousel [interval]="5000" [showNavigationArrows]="true" [showNavigationIndicators]="true">
+        <ng-template ngbSlide *ngFor="let img of data?.imagesSrc">
+          <img src="{{img}}" alt="Slide 1">
+
+        </ng-template>
+
+      </ngb-carousel>
+    </div>
+    <div class="col-12 col-lg-6">
+      <h1>
+        {{data?.title}}
+        <img  (click)="onEdit.emit()" src="assets/edit.png" width="50" role="button"/>
+      </h1>
+      <h5>
+        {{data?.category}}
+      </h5>
+      <p>£ {{data?.price}}</p>
+      <p>
+        <img  (click)="onEdit.emit()" src="assets/car.png" width="30" role="button"/>
+        Home Delivery
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <h2>Conditions
+        <img  (click)="onEdit.emit()" src="assets/edit.png" width="50" role="button"/>
+      </h2>
+      <p>
+        {{data?.condition}}
+      </p>
+    </div>
+    <div class="col-12">
+      <h2>Summary
+        <img  (click)="onEdit.emit()" src="assets/edit.png" width="50" role="button"/>
+      </h2>
+      <p>
+        {{data?.summary}}
+      </p>
+    </div>
+  </div>
+
+  <div class="text-center mt-4">
+    <button (click)="publish = true" class="btn btn-primary btn-lg">Publish</button>
+  </div>
+</div>
+
+<div *ngIf="publish">
+  <h5 class="text-center mt-4">The advertisement related to</h5>
+  <h2 class="text-center">"{{data.title}}"</h2>
+  <h5 class="text-center">
+    has been sent to our AI-checker. Sooner
+    it will appear in the list of books
+    available to buy.
+  </h5>
+  <h5 class="text-center">
+    If you do not have any modification, you
+    can proceed.
+  </h5>
+
+  <div class="text-center">
+    <button class="mt-4 btn btn-primary btn-lg" (click)="onSubmit.emit()">NEXT</button>
+  </div>
+</div>
