--- a/src/app/give-book/confirmation/confirmation.component.html
+++ b/src/app/give-book/confirmation/confirmation.component.html
@@ -1,1 +1,20 @@
-<p>confirmation works!</p>
+<div class="container">
+  <h2 class="mt-3">
+    Your advertisement passed the control and is
+    now published in the website
+  </h2>
+  <div class="text-center mt-4">
+    <img src="assets/smile.png" width="150"/>
+  </div>
+
+  <h4 class="mt-3 text-center">
+    You will receive an email of
+    <br />
+    confirmation with all the details.
+  </h4>
+
+  <div class="mt-5 text-center">
+    <button (click)="onClose.emit()" class="btn btn-secondary me-2">Close</button>
+    <button  (click)="onSeeList.emit()" class="btn btn-primary">See list</button>
+  </div>
+</div>
