--- a/src/app/give-book/description/description.component.html
+++ b/src/app/give-book/description/description.component.html
@@ -1,9 +1,11 @@
 
-<div class="container mt-3">
+<form (ngSubmit)="submit($event)" ngNativeValidate class="container mt-3">
   <div class="row">
     <div class="col">
       <h4>Purpose</h4>
-      <select class="form-select">
+      <select
+        name="purpose"
+        [(ngModel)]="purpose" required class="form-select">
         <option value="">Choose</option>
         <option value="Sell">Sell</option>
         <option value="Lend">Lend</option>
@@ -12,7 +14,9 @@
 
     <div class="col">
       <h4>Category</h4>
-      <select class="form-select">
+      <select
+        name="category"
+        required [(ngModel)]="category" class="form-select">
         <option value="">Choose</option>
         <option value="Narrative">Narrative</option>
         <option value="Academic">Academic</option>
@@ -21,7 +25,9 @@
 
     <div class="col">
       <h4>Condition</h4>
-      <select class="form-select">
+      <select
+        name="condition"
+        required [(ngModel)]="condition" class="form-select">
         <option value="">Choose</option>
         <option value="As new">As new</option>
         <option value="Good">Good</option>
@@ -41,48 +47,58 @@
       <label role="button" class="select-img border border-1">
         <img src="assets/camera_fill.png" width="50"/>
         <strong>Add image</strong>
-        <input multiple (change)="selectImage($event)" hidden type="file" accept="image/*"/>
+        <input  required multiple (change)="selectImage($event)" hidden type="file" accept="image/*"/>
       </label>
     </div>
   </div>
 
   <div class="mt-4">
     <h4>Title of the book</h4>
-    <input class="form-control" [(ngModel)]="title"/>
+    <input
+      name="title"
+      required class="form-control" [(ngModel)]="title"/>
   </div>
 
   <div class="row mt-4">
     <div class="col">
       <h4>Author</h4>
-      <input class="form-control"/>
+      <input [(ngModel)]="author" required class="form-control"/>
     </div>
     <div class="col">
       <h4>Edition</h4>
-      <input class="form-control"/>
+      <input [(ngModel)]="edition" required class="form-control"/>
     </div>
 
     <div class="col">
       <h4>ISBN</h4>
-      <input class="form-control"/>
+      <input
+        name="isbn"
+        [(ngModel)]="isbn" required class="form-control"/>
     </div>
   </div>
 
   <div class="mt-4">
     <h4>Summary of the book</h4>
-    <textarea class="form-control" ></textarea>
+    <textarea
+      name="summary"
+      [(ngModel)]="summary" required class="form-control" ></textarea>
   </div>
 
   <h4 class="mt-4">Price</h4>
   <div class="input-group">
 
     <span class="input-group-text" id="basic-addon1">£</span>
-    <input type="number" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
+    <input
+      name="price"
+      [(ngModel)]="price" required type="number" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
   </div>
 
 
   <div class="mt-4">
     <h4>Delivery method</h4>
-    <select class="form-select">
+    <select
+      name="deliveryMethod"
+      [(ngModel)]="deliveryMethod" required class="form-select">
       <option value="">Choose</option>
       <option value="In person">In person</option>
       <option value="Home delivery">Home delivery</option>
@@ -93,4 +109,4 @@
     <button class="btn btn-primary">NEXT</button>
   </div>
 
-</div>
+</form>
