--- a/src/app/borrow-filter-results/borrow-filter-results.component.css
+++ b/src/app/borrow-filter-results/borrow-filter-results.component.css
@@ -43,6 +43,7 @@
 .text-results {
     font-size: 26px;
     font-family: monospace;
+    margin-top: 10px;
 }
 
 .text-filter {
@@ -59,20 +60,49 @@
 .filters {
     display: flex;
     flex-direction: row;
-    align-content: center;
+    align-items: center;
+    justify-content: space-between;
     border: 1px solid rgb(6, 3, 49);
     padding: 5px;
     margin-left: 20px;
     margin-top: 5px;
     border-radius: 5px;
     margin-left: 50px;
+    width: 480px;
+    height: 50px;
+}
+
+.filter {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    border: 1px solid rgb(6, 3, 49);
+    padding: 5px;
+    border-radius: 5px;
+    width: 100px;
+    height: 30px;
+    background-color: rgb(233, 236, 239);
+}
+
+.filter-delivery {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    border: 1px solid rgb(6, 3, 49);
+    padding: 5px;
+    border-radius: 5px;
+    width: 160px;
+    height: 30px;
+    background-color: rgb(233, 236, 239);
 }
 
 .book-card {
     display: flex;
     flex-direction: row;
     margin-left: 50px;
-    margin-top: 20px;
+    margin-top: 50px;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     border-radius: 20px;
     cursor: pointer;
@@ -221,12 +251,4 @@
     font-family: monospace;
     margin-left: 10px;
     margin-top: 2px;
-}
-
-.filter-box {
-    margin-left: 200px;
-    position: absolute;
-    z-index: 2;
-    margin-top: -1000px;
-    visibility: hidden;
 }
