change background of buttons

--- a/src/app/give-book/confirmation/confirmation.component.html
+++ b/src/app/give-book/confirmation/confirmation.component.html
@@ -15,6 +15,6 @@
 
   <div class="mt-5 text-center">
     <button (click)="onClose.emit()" class="btn btn-secondary me-2">Close</button>
-    <button  (click)="onSeeList.emit()" class="btn btn-primary">See list</button>
+    <button  (click)="onSeeList.emit()" class="btn btn-dark">See list</button>
   </div>
 </div>
