--- a/src/app/give-book/description/description.component.html
+++ b/src/app/give-book/description/description.component.html
@@ -73,7 +73,7 @@
       <h4>ISBN</h4>
       <input
         name="isbn"
-        [(ngModel)]="isbn" required class="form-control"/>
+        [(ngModel)]="isbn" class="form-control"/>
     </div>
   </div>
 
@@ -106,7 +106,7 @@
   </div>
 
   <div class="mt-3">
-    <button class="btn btn-primary">NEXT</button>
+    <button class="btn btn-dark">NEXT</button>
   </div>
 
 </form>
