--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -28,14 +28,17 @@
             </li>
             <li class="main-menu__item pointer" (click)="toUnimplemented()">
                 <img class="icon" src="assets\chat.svg" alt="chat icon">
+                <img class="icon-hover" src="assets\black-chat.svg" alt="chat icon">
                 <p class="icon-text">Chat</p>
             </li>
             <li class="main-menu__item pointer" (click)="toUnimplemented()">
                 <img class="icon" src="assets\heart.svg" alt="favorites icon">
+                <img class="icon-hover" src="assets\black-heart.svg" alt="favorites icon">
                 <p class="icon-text">Favorites</p>
             </li>
             <li class="main-menu__item pointer" (click)="toUnimplemented()">
                 <img class="icon" src="assets\profile.svg" alt="profile icon">
+                <img class="icon-hover" src="assets\black-profile.svg" alt="profile icon">
                 <p class="icon-text">My profile</p>
             </li>
         </ul>
