change coin symbol

--- a/src/app/give-book/description/description.component.html
+++ b/src/app/give-book/description/description.component.html
@@ -87,7 +87,7 @@
   <h4 class="mt-4">Price</h4>
   <div class="input-group">
 
-    <span class="input-group-text" id="basic-addon1">£</span>
+    <span class="input-group-text" id="basic-addon1">€</span>
     <input
       name="price"
       [(ngModel)]="price" required type="number" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
