--- a/src/app/give-book/verification/verification.component.html
+++ b/src/app/give-book/verification/verification.component.html
@@ -8,7 +8,7 @@
            style="right: 40px; top: 10px; z-index: 1000"/>
       <ngb-carousel [interval]="5000" [showNavigationArrows]="true" [showNavigationIndicators]="true">
         <ng-template ngbSlide *ngFor="let img of data?.imagesSrc">
-          <img width="100%" src="{{img}}" alt="Slide 1">
+          <img style="max-height: 100%" src="{{img}}" alt="Slide 1">
 
         </ng-template>
 
@@ -22,7 +22,7 @@
       <h5>
         {{data?.category}}
       </h5>
-      <p>£ {{data?.price}}</p>
+      <p>€ {{data?.price}}</p>
       <p>
         <img  (click)="onEdit.emit()" src="assets/car.png" width="30" role="button"/>
           {{data?.deliveryMethod}}
