added components for book details

--- a/src/app/borrow-filter-results/borrow-filter-results.component.html
+++ b/src/app/borrow-filter-results/borrow-filter-results.component.html
@@ -47,7 +47,7 @@
         </div>
     </div>
 
-    <div class="book-card">
+    <div class="book-card" (click)="toBorrowBook()">
         <img class="book-img" src="assets\gray2.jpg" alt="The image for 'Diary of a Wimpy kid'">
         <div class="book-details">
             <p class="title"><b>The Picture of Dorian Gray</b></p>
