--- a/src/app/buy-filter-results/buy-filter-results.component.html
+++ b/src/app/buy-filter-results/buy-filter-results.component.html
@@ -45,7 +45,7 @@
             <img class="filters-icon" src="assets\filters.svg" alt="filters icon">
         </div>
     </div>
-    <div class="first-book-card">
+    <div class="first-book-card" (click)="toBuyBook()">
         <img class="book-img" src="assets\diary2.jpg" alt="The image for 'Diary of a Wimpy kid'">
         <div class="book-details">
             <p class="title"><b>Diary of a Wimpy Kid</b></p>
