--- a/src/app/give-book/description/description.component.html
+++ b/src/app/give-book/description/description.component.html
@@ -2,7 +2,7 @@
 <form (ngSubmit)="submit($event)" ngNativeValidate class="container mt-3">
   <div class="row">
     <div class="col">
-      <h4>Purpose</h4>
+      <h4>Purpose*</h4>
       <select
         name="purpose"
         [(ngModel)]="purpose" required class="form-select">
@@ -13,7 +13,7 @@
     </div>
 
     <div class="col">
-      <h4>Category</h4>
+      <h4>Category*</h4>
       <select
         name="category"
         required [(ngModel)]="category" class="form-select">
@@ -24,7 +24,7 @@
     </div>
 
     <div class="col">
-      <h4>Condition</h4>
+      <h4>Condition*</h4>
       <select
         name="condition"
         required [(ngModel)]="condition" class="form-select">
@@ -38,7 +38,7 @@
   </div>
 
   <div class="row mt-4">
-    <h4>Pictures {{imageFiles.length}}/3</h4>
+    <h4>Pictures* {{imageFiles.length}}/3</h4>
     <div class="d-flex flex-wrap">
       <div class="select-img border border-1 me-2" *ngFor="let img of imagesSrc; let index = index;">
         <img src="{{img}}" width="120" height="120"/>
@@ -53,7 +53,7 @@
   </div>
 
   <div class="mt-4">
-    <h4>Title of the book</h4>
+    <h4>Title of the book*</h4>
     <input
       name="title"
       required class="form-control" [(ngModel)]="title"/>
@@ -61,11 +61,11 @@
 
   <div class="row mt-4">
     <div class="col">
-      <h4>Author</h4>
+      <h4>Author*</h4>
       <input [(ngModel)]="author" required class="form-control"/>
     </div>
     <div class="col">
-      <h4>Edition</h4>
+      <h4>Edition*</h4>
       <input [(ngModel)]="edition" required class="form-control"/>
     </div>
 
@@ -78,13 +78,13 @@
   </div>
 
   <div class="mt-4">
-    <h4>Summary of the book</h4>
+    <h4>Summary of the book*</h4>
     <textarea
       name="summary"
       [(ngModel)]="summary" required class="form-control" ></textarea>
   </div>
 
-  <h4 class="mt-4">Price</h4>
+  <h4 class="mt-4">Price*</h4>
   <div class="input-group">
 
     <span class="input-group-text" id="basic-addon1">€</span>
@@ -95,7 +95,7 @@
 
 
   <div class="mt-4">
-    <h4>Delivery method</h4>
+    <h4>Delivery method*</h4>
     <select
       name="deliveryMethod"
       [(ngModel)]="deliveryMethod" required class="form-select">
