--- a/src/app/give-book/give-book.component.html
+++ b/src/app/give-book/give-book.component.html
@@ -6,6 +6,7 @@
   <h1 class="text-center">Give a book</h1>
   <div class="steps">
     <div class="row">
+      <div class="col"></div>
       <div class="col" *ngFor="let step of steps; let index = index">
         <div class="step">
           <div class="step-circle" [class.active]="step.number <= stepIndex">{{step.number}}</div>
