--- a/src/app/buy-book-details/buy-book-details.component.css
+++ b/src/app/buy-book-details/buy-book-details.component.css
@@ -2,9 +2,98 @@
     position: absolute;
     margin-top: 100px;
     width: 100%;
+    margin-left: 50px;
+}
+
+button {
+    font-family: monospace;
+    align-items: center;
+    font-size: 14px;
+    margin-top: 10px;
+    background: #01001b;
+    color: white;
 }
 
 .category {
-    font-size: 20px;
+    font-size: 22px;
     font-family: monospace;
+    margin-top: 30px;
+}
+
+.text {
+    font-size: 18px;
+    font-family: monospace;
+    margin-top: -15px;
+    /* width: 1000px; */
+}
+
+.details {
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+}
+
+.book-img {
+    width: 150px;
+    height: auto;
+    border-radius: 5px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.title {
+    font-size: 22px;
+    font-family: monospace;
+    margin-left: 50px;
+}
+
+.reviews, .price, .delivery {
+    margin-left: 50px;
+    display: flex;
+    flex-direction: row;
+}
+
+.star-rating {
+    width: 18px;
+    margin-right: 3px;
+    margin-bottom: 20px;
+}
+
+.reviews-text {
+    margin-left: 20px;
+    margin-top: -3px;
+    font-family: monospace;
+}
+
+.price-text {
+    font-family: monospace;
+}
+
+.user {
+    width: 18px;
+    margin-left: 10px;
+    margin-bottom: 17px;
+}
+
+.delivery-icon {
+    width: 20px;
+    margin-bottom: 17px;
+    margin-right: 5px;
+}
+
+.username {
+    font-family: monospace;
+    margin-left: 2px;
+}
+
+.details {
+    display: flex;
+    align-items: center;
+}
+
+.reviewer {
+    margin-top: -15px;
+}
+
+.user-profile {
+    width:50px;
 }
