--- a/src/app/buy-book-details/buy-book-details.component.html
+++ b/src/app/buy-book-details/buy-book-details.component.html
@@ -47,7 +47,40 @@
         <p class="category"><b>About the seller</b></p>
         <div class="reviewer">
             <img class="user-profile" src="assets\user-square.svg" alt="user profile">
+            <div class="reviewer-details">
+                <p class="name">Cristina Sol</p>
+                <div class="stars">
+                    <img class="star-rating1" src="assets\star-2.svg" alt="rating star'">
+                    <img class="star-rating1" src="assets\star-2.svg" alt="rating star'">
+                    <img class="star-rating1" src="assets\star-2.svg" alt="rating star'">
+                    <img class="star-rating1" src="assets\star-2.svg" alt="rating star'">
+                    <img class="star-rating1" src="assets\star-1.svg" alt="rating star'">
+                </div>
+            </div>
         </div>
+        <p class="stating">I have bought two times from this seller, super nice and quick delivery.</p>
+
+        <div class="reviewer1">
+            <img class="user-profile" src="assets\user-square.svg" alt="user profile">
+            <div class="reviewer-details">
+                <p class="name">Luca Greg</p>
+                <div class="stars">
+                    <img class="star-rating1" src="assets\star-2.svg" alt="rating star'">
+                    <img class="star-rating1" src="assets\star-2.svg" alt="rating star'">
+                    <img class="star-rating1" src="assets\star-2.svg" alt="rating star'">
+                    <img class="star-rating1" src="assets\star-2.svg" alt="rating star'">
+                    <img class="star-rating1" src="assets\star-1.svg" alt="rating star'">
+                </div>
+            </div>
+        </div>
+        <p class="stating">Very professional, no problems.</p>
     </div>
-    <div class="buttons"></div>
+    <div class="buttons">
+        <button (click)="toUnimplemented()" class="btn btn-light" id="chat-btn">
+            <img src="assets/chat.svg" width="22" />
+        </button>
+        <button (click)="toGeneralInfo()" class="btn btn-light" id="chat-btn">
+            Buy
+        </button>
+    </div>
 </div>
