--- a/src/app/buy-process-confirmation/buy-process-confirmation.component.css
+++ b/src/app/buy-process-confirmation/buy-process-confirmation.component.css
@@ -25,42 +25,7 @@ button {
     font-size: 16px;
     align-self: center;
     margin-bottom: 10px;
-}
-
-.stating {
-    font-family: monospace;
-    font-size: 28px;
-    align-self: center;
     margin-top: 20px;
-}
-
-.stating2 {
-    font-family: monospace;
-    font-size: 28px;
-    align-self: center;
-    margin-top: -15px;
-}
-
-.text {
-    font-family: monospace;
-    font-size: 16px;
-    align-self: center;
-    margin-top: -10px;
-}
-
-.text-price {
-    font-family: monospace;
-    font-size: 16px;
-    align-self: center;
-    margin-top: 20px;
-}
-
-.book-img {
-    width: 150px;
-    height: auto;
-    border-radius: 5px;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    align-self: center;
 }
 
 .step {
@@ -122,6 +87,14 @@ button {
     margin-left: 120px;
 }
 
+.confirmation {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+}
 
-
-  
+p {
+    font-family: monospace;
+    font-size: 16px;
+}
